# readgen

./: .gitignore  README.md  pyproject.toml  readgen.toml
src/readgen/: cli.py  config.py  generator.py
src/readgen/utils/: __init__.py  paths.py
